pac/net/memealyzer/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memealyzer
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: memealyzer-web
          servicePort: 80
      - path: /images
        backend:
          serviceName: memealyzer-api
          servicePort: 80
      - path: /image
        backend:
          serviceName: memealyzer-api
          servicePort: 80
      - path: /config
        backend:
          serviceName: memealyzer-api
          servicePort: 80
      - path: /imagehub
        backend:
          serviceName: memealyzer-api
          servicePort: 80
